syntax = "proto3";

option go_package = "github.com/vantoan19/Petifies/proto/auth-gateway/v1";

import "common/common.proto";
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";

message GetMyInfoRequest {}

service AuthGateway {
    rpc GetMyInfo(GetMyInfoRequest) returns (User) {}
}